--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_BACKEND_URL=https://backend-pastebin-production.up.railway.app/api/paste
+VITE_BACKEND_URL=https://backend-pastebin-production.up.railway.app
